# trip_cortex

./: .env.deploy.example  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: README.md  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 2f59c70e0b61_initial_schema_policies_and_chunks.py  dffcdd91f3c0_create_policy_chunks_table.py
docs/: 01-prd.md  02-architecture-overview.md  03-module-ingestion-pipeline.md  04-module-rules-engine.md  05-module-booking-agent.md  06-infrastructure.md  07-error-handling.md  08-security.md  09-testing-strategy.md  10-observability.md  11-cost-estimation.md  12-project-structure.md  13-database-design.md  clerk-secret-setup.md  deployment-workflow.md  github-actions-deploy-role.md  reference-links.md
dummy-portal/: .cta.json  .gitignore  components.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
dummy-portal/src/: constants.ts  routeTree.gen.ts  router.tsx  start.ts  styles.css
events/: generate-embeddings.json  reason.json  s3-upload.json  sqs-embedding.json
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css  vite-env.d.ts
infra/: bootstrap.yaml  functions.yaml
infra/stacks/: api.yaml  aurora.yaml  functions.yaml  network.yaml  storage.yaml  tables.yaml  workflow.yaml
scripts/: create_local_tables.py  deploy.sh  hitl_smoke_test.py  setup-local.sh  teardown.sh
src/: requirements.txt
src/alembic/: env.py
src/booking_agent/: agentcore_handler.py  config.py  deploy.sh  flight_booking.py  flight_search.py  requirements.txt  smoke_test.py
src/core/: __init__.py  clients.py  config.py  errors.py
src/handlers/: bda_setup.py  booking_request.py  check_bda_status.py  complete_booking.py  connect.py  disconnect.py  embed_and_retrieve.py  generate_embeddings.py  graceful_degradation.py  heartbeat.py  ingestion_complete.py  ingestion_failed.py  invoke_flight_booking.py  invoke_flight_search.py  migrate.py  reason_plan.py  (+4 more)
statemachine/: booking-workflow.asl.json  ingestion-polling.asl.json
test-policy/: corporate-travel-policy.md
tests/: conftest.py
(+184 files in other folders)
