[project]
name = "trip-cortex"
version = "0.1.0"
description = "AI-powered corporate travel booking with automated policy enforcement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.56",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "moto>=5.1.21",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: requires Docker Compose services",
    "e2e: requires deployed AWS environment",
]
