[project]
name = "trip-cortex"
version = "0.1.0"
description = "AI-powered corporate travel booking with automated policy enforcement"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.42.56",
    "clerk-backend-api>=5.0.2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.47",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "moto>=5.1.21",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "pgvector", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: requires Docker Compose services",
    "e2e: requires deployed AWS environment",
]
